# computer-control-framework

./: .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_STATUS.md  README.md  env.example  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
examples/: 01_basic_control.py  02_screenshot.py  03_ai_agent.py
scripts/: check_permission.py  test_omniparser.py  test_real_annotation.py  test_window_controls.py  verify_all_features.py
src/: __init__.py  ai_interface.py  async_agent.py
src/core/: __init__.py  actions.py  base.py  retry.py  types.py
src/utils/: __init__.py  debug.py  logger.py
src/vision/: __init__.py  accessibility_detector.py  annotator.py  detector.py  omniparser_detector.py
tests/: __init__.py  test_async_agent.py  test_controller.py  test_core.py  test_logger.py  test_retry.py
